v1.0.0/modules/schema/pages/class/SwitchInfo.adoc
= `SwitchInfo`
:toclevels: 4


+++<was Switch data.>
Switch datasheet information.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:SwitchInfo`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/AssetInfo.adoc[`AssetInfo`]
*** *`SwitchInfo`*
 **** xref::class/OldSwitchInfo.adoc[`OldSwitchInfo`]


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
SwitchInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}























PowerSystemResource {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



CatalogAssetType {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Asset {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ProductAssetModel {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}














SwitchInfo -> PowerSystemResource: PowerSystemResources


SwitchInfo -> CatalogAssetType: CatalogAssetType


SwitchInfo -> Asset: Assets


SwitchInfo -> ProductAssetModel: ProductAssetModel


SwitchInfo -> DiagramObject: DiagramObjects


SwitchInfo -> InstanceSet: InstanceSet


SwitchInfo -> Name: Names


SwitchInfo -> ChangeSetMember: PropertiesCIMDataObject


SwitchInfo -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<breakingCapacity,`breakingCapacity`>>
| 0..1
| xref::class/CurrentFlow.adoc[`CurrentFlow`]
| +++The maximum fault current a breaking device can break safely under prescribed conditions of use.+++

| <<gasWeightPerTank,`gasWeightPerTank`>>
| 0..1
| xref::class/Mass.adoc[`Mass`]
| +++Weight of gas in each tank of SF6 dead tank breaker.+++

| <<isSinglePhase,`isSinglePhase`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++If true, it is a single phase switch.+++

| <<isUnganged,`isUnganged`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++If true, the switch is not ganged (i.e., a switch phase may be operated separately from other phases).+++

| <<lowPressureAlarm,`lowPressureAlarm`>>
| 0..1
| xref::class/Pressure.adoc[`Pressure`]
| +++Gas or air pressure at or below which a low pressure alarm is generated.+++

| <<lowPressureLockOut,`lowPressureLockOut`>>
| 0..1
| xref::class/Pressure.adoc[`Pressure`]
| +++Gas or air pressure below which the breaker will not open.+++

| <<oilVolumePerTank,`oilVolumePerTank`>>
| 0..1
| xref::class/Volume.adoc[`Volume`]
| +++Volume of oil in each tank of bulk oil breaker.+++

| <<ratedCurrent,`ratedCurrent`>>
| 0..1
| xref::class/CurrentFlow.adoc[`CurrentFlow`]
| +++Rated current.+++

| <<ratedFrequency,`ratedFrequency`>>
| 0..1
| xref::class/Frequency.adoc[`Frequency`]
| +++Frequency for which switch is rated.+++

| <<ratedImpulseWithstandVoltage,`ratedImpulseWithstandVoltage`>>
| 0..1
| xref::class/Voltage.adoc[`Voltage`]
| +++Rated impulse withstand voltage, also known as BIL (Basic Impulse Level).+++

| <<ratedInterruptingTime,`ratedInterruptingTime`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Switch rated interrupting time in seconds.+++

| <<ratedVoltage,`ratedVoltage`>>
| 0..1
| xref::class/Voltage.adoc[`Voltage`]
| +++Rated voltage.+++

| <<CatalogAssetType,`CatalogAssetType`>>
| 0..1
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]
| +++Asset information (nameplate) for this catalog asset type.+++

| <<ProductAssetModel,`ProductAssetModel`>>
| 0..1
| xref::class/ProductAssetModel.adoc[`ProductAssetModel`]
| +++Product asset model which conforms to this catalog asset type.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<Assets,`Assets`>>
| 0..*
| xref::class/Asset.adoc[`Asset`]
| +++All assets described by this data.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<PowerSystemResources,`PowerSystemResources`>>
| 0..*
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
| +++All power system resources with this datasheet information.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Assets]
=== `Assets`
+++All assets described by this data.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

//[discrete]
[#breakingCapacity]
=== `breakingCapacity`
+++The maximum fault current a breaking device can break safely under prescribed conditions of use.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchInfo.breakingCapacity`
| Cardinality
| 0..1
| Type
| xref::class/CurrentFlow.adoc[`CurrentFlow`]


|===

//[discrete]
[#CatalogAssetType]
=== `CatalogAssetType`
+++Asset information (nameplate) for this catalog asset type.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.CatalogAssetType`
| Cardinality
| 0..1
| Type
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#gasWeightPerTank]
=== `gasWeightPerTank`
+++Weight of gas in each tank of SF6 dead tank breaker.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchInfo.gasWeightPerTank`
| Cardinality
| 0..1
| Type
| xref::class/Mass.adoc[`Mass`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#isSinglePhase]
=== `isSinglePhase`
+++If true, it is a single phase switch.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchInfo.isSinglePhase`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#isUnganged]
=== `isUnganged`
+++If true, the switch is not ganged (i.e., a switch phase may be operated separately from other phases).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchInfo.isUnganged`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#lowPressureAlarm]
=== `lowPressureAlarm`
+++Gas or air pressure at or below which a low pressure alarm is generated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchInfo.lowPressureAlarm`
| Cardinality
| 0..1
| Type
| xref::class/Pressure.adoc[`Pressure`]


|===

//[discrete]
[#lowPressureLockOut]
=== `lowPressureLockOut`
+++Gas or air pressure below which the breaker will not open.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchInfo.lowPressureLockOut`
| Cardinality
| 0..1
| Type
| xref::class/Pressure.adoc[`Pressure`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#oilVolumePerTank]
=== `oilVolumePerTank`
+++Volume of oil in each tank of bulk oil breaker.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchInfo.oilVolumePerTank`
| Cardinality
| 0..1
| Type
| xref::class/Volume.adoc[`Volume`]


|===

//[discrete]
[#PowerSystemResources]
=== `PowerSystemResources`
+++All power system resources with this datasheet information.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.PowerSystemResources`
| Cardinality
| 0..*
| Type
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

//[discrete]
[#ProductAssetModel]
=== `ProductAssetModel`
+++Product asset model which conforms to this catalog asset type.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.ProductAssetModel`
| Cardinality
| 0..1
| Type
| xref::class/ProductAssetModel.adoc[`ProductAssetModel`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ratedCurrent]
=== `ratedCurrent`
+++Rated current.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchInfo.ratedCurrent`
| Cardinality
| 0..1
| Type
| xref::class/CurrentFlow.adoc[`CurrentFlow`]


|===

//[discrete]
[#ratedFrequency]
=== `ratedFrequency`
+++Frequency for which switch is rated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchInfo.ratedFrequency`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

//[discrete]
[#ratedImpulseWithstandVoltage]
=== `ratedImpulseWithstandVoltage`
+++Rated impulse withstand voltage, also known as BIL (Basic Impulse Level).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchInfo.ratedImpulseWithstandVoltage`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]


|===

//[discrete]
[#ratedInterruptingTime]
=== `ratedInterruptingTime`
+++Switch rated interrupting time in seconds.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchInfo.ratedInterruptingTime`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#ratedVoltage]
=== `ratedVoltage`
+++Rated voltage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchInfo.ratedVoltage`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===


